Import key figures data

--- a/Smartmeter_Data.ipynb
+++ b/Smartmeter_Data.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "id": "fqPVXRnLt7Bl"
    },
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import glob\n",
+    "import pandas as pd\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -83,42 +95,149 @@
        "4       6016  2022-04-16T06:15:00.000Z         85     13.068"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import libraries\n",
-    "import glob\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Get CSV files list from a folder\n",
+    "# Get Smartmeter Data\n",
+    "# Get CSV files list from folder\n",
     "path = './DATA/smartmeter'\n",
     "csv_files = glob.glob(path + \"/*.csv.gz\")\n",
     "\n",
     "# Read each CSV file into DataFrame\n",
-    "# This creates a list of dataframes\n",
     "df_list = (pd.read_csv(file) for file in csv_files)\n",
     "\n",
     "# Concatenate all DataFrames\n",
-    "big_df   = pd.concat(df_list, ignore_index=True)\n",
-    "big_df.head()"
+    "smartmeter_df = pd.concat(df_list, ignore_index=True)\n",
+    "smartmeter_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PERIOD_REF</th>\n",
+       "      <th>PERIOD_COMP</th>\n",
+       "      <th>CODE_REGION</th>\n",
+       "      <th>REGION</th>\n",
+       "      <th>INDICATORS</th>\n",
+       "      <th>UNIT_MES</th>\n",
+       "      <th>VALUE</th>\n",
+       "      <th>STATUS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CH</td>\n",
+       "      <td>Schweiz</td>\n",
+       "      <td>Ind_01_01</td>\n",
+       "      <td>UM_6</td>\n",
+       "      <td>8606033</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Aeugst am Albis</td>\n",
+       "      <td>Ind_01_01</td>\n",
+       "      <td>UM_6</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Affoltern am Albis</td>\n",
+       "      <td>Ind_01_01</td>\n",
+       "      <td>UM_6</td>\n",
+       "      <td>12303</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Bonstetten</td>\n",
+       "      <td>Ind_01_01</td>\n",
+       "      <td>UM_6</td>\n",
+       "      <td>5572</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Hausen am Albis</td>\n",
+       "      <td>Ind_01_01</td>\n",
+       "      <td>UM_6</td>\n",
+       "      <td>3751</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PERIOD_REF PERIOD_COMP CODE_REGION              REGION INDICATORS UNIT_MES  \\\n",
+       "0       2019         NaN          CH             Schweiz  Ind_01_01     UM_6   \n",
+       "1       2019         NaN           1     Aeugst am Albis  Ind_01_01     UM_6   \n",
+       "2       2019         NaN           2  Affoltern am Albis  Ind_01_01     UM_6   \n",
+       "3       2019         NaN           3          Bonstetten  Ind_01_01     UM_6   \n",
+       "4       2019         NaN           4     Hausen am Albis  Ind_01_01     UM_6   \n",
+       "\n",
+       "     VALUE STATUS  \n",
+       "0  8606033      A  \n",
+       "1     1981      A  \n",
+       "2    12303      A  \n",
+       "3     5572      A  \n",
+       "4     3751      A  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get Key Figures Communities\n",
+    "csv_file = './DATA/key_figures_communities/ts-x-21.03.01.csv'\n",
+    "\n",
+    "key_figures_df = pd.read_csv(file, sep=';', quotechar='\"', dtype='str')\n",
+    "key_figures_df.head()\n"
+   ]
   },
   {
    "cell_type": "code",
