--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -5959,43 +5959,58 @@
    "cell_type": "code",
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "no such column: nan",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[13], line 14\u001B[0m\n\u001B[1;32m     12\u001B[0m         plantCategoryId \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNULL\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     13\u001B[0m     sql \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mINSERT INTO solarPlants VALUES(NULL,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m)\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mxtf_id\u001B[39m\u001B[38;5;124m\"\u001B[39m], row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mPostCode\u001B[39m\u001B[38;5;124m\"\u001B[39m], row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTotalPower\u001B[39m\u001B[38;5;124m\"\u001B[39m], mainCategoryId, subCategoryId, plantCategoryId, row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m_x\u001B[39m\u001B[38;5;124m\"\u001B[39m], row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m_x\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[0;32m---> 14\u001B[0m     \u001B[43mcursor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[43msql\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     16\u001B[0m connection\u001B[38;5;241m.\u001B[39mcommit()\n",
-      "\u001B[0;31mOperationalError\u001B[0m: no such column: nan"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xtf_id                  203474\n",
+      "Address                 203474\n",
+      "PostCode                203474\n",
+      "Municipality            203474\n",
+      "Canton                  203474\n",
+      "BeginningOfOperation    203474\n",
+      "InitialPower            203474\n",
+      "TotalPower              203474\n",
+      "MainCategory            203474\n",
+      "SubCategory             203474\n",
+      "PlantCategory           203474\n",
+      "_x                      203474\n",
+      "_y                      203474\n",
+      "dtype: int64\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "electricityProductionPlant = pd.read_csv(\"./DATA/solar_powerplants/ElectricityProductionPlant.csv\", delimiter=\",\")\n",
     "electricityProductionPlant.head()\n",
+    "electricityProductionPlant.replace(np.nan, \"NULL\", inplace=True)\n",
+    "print(electricityProductionPlant.count())\n",
     "\n",
     "for index, row in electricityProductionPlant.iterrows():\n",
     "    mainCategoryId = '\"' + row[\"MainCategory\"] + '\"'\n",
     "    subCategoryId = '\"' + row[\"SubCategory\"] + '\"'\n",
+    "    xCor = row[\"_x\"]\n",
+    "    yCor = row[\"_y\"]\n",
     "    \n",
     "    if isinstance(row[\"PlantCategory\"], str):\n",
     "        plantCategoryId = '\"' + row[\"PlantCategory\"] + '\"'\n",
-    "        \n",
     "    else:\n",
     "        plantCategoryId = \"NULL\"\n",
-    "    sql = \"INSERT INTO solarPlants VALUES(NULL,{},{},{},{},{},{},{},{})\".format(row[\"xtf_id\"], row[\"PostCode\"], row[\"TotalPower\"], mainCategoryId, subCategoryId, plantCategoryId, row[\"_x\"], row[\"_x\"])\n",
+    "        \n",
+    "    sql = \"INSERT INTO solarPlants VALUES(NULL,{},{},{},{},{},{},{},{})\".format(row[\"xtf_id\"], row[\"PostCode\"], row[\"TotalPower\"], mainCategoryId, subCategoryId, plantCategoryId, xCor, yCor)\n",
     "    cursor.execute(sql)\n",
-    "\n",
+    "    \n",
     "connection.commit()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-30T17:40:50.281987Z",
-     "start_time": "2024-03-30T17:40:50.058660Z"
+     "end_time": "2024-03-30T23:24:14.484438Z",
+     "start_time": "2024-03-30T23:24:08.978783Z"
     }
    },
-   "execution_count": 13
+   "execution_count": 31
   }
  ]
 }
