--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -31,7 +31,8 @@
    "source": [
     "#Import Modules\n",
     "import os, sys, sqlite3\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import numpy as np\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -5854,7 +5855,6 @@
    "source": [
     "#City Daten einlesen als Dataframe und in DB sichern\n",
     "city = pd.read_csv(\"./DATA/city_directory/AMTOVZ_CSV_LV95.csv\", delimiter=\";\")\n",
-    "city.head()\n",
     "for index, row in city.iterrows():\n",
     "    ort = '\"' + row[\"Ortschaftsname\"] + '\"'\n",
     "    lawCityName = '\"' + row[\"Gemeindename\"] + '\"'\n",
@@ -5904,6 +5904,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "#Importieren der Hauptkategorien\n",
     "mainCategory = pd.read_csv(\"./DATA/solar_powerplants/MainCategoryCatalogue.csv\", delimiter=\",\")\n",
     "mainCategory.head()\n",
     "\n",
@@ -5931,6 +5932,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "#Importieren der Unterkategorien\n",
     "subCategory = pd.read_csv(\"./DATA/solar_powerplants/SubCategoryCatalogue.csv\", delimiter=\",\")\n",
     "subCategory.head()\n",
     "\n",
@@ -5958,7 +5960,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "#Importieren der Solar Kraftanlagen\n",
+    "\n",
     "\n",
     "electricityProductionPlant = pd.read_csv(\"./DATA/solar_powerplants/ElectricityProductionPlant.csv\", delimiter=\",\")\n",
     "electricityProductionPlant.head()\n",
@@ -5988,6 +5991,16 @@
     }
    },
    "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#Importieren Demografie Daten Indikator\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ]
 }
