--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -5996,11 +5996,103 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Importieren Demografie Daten Indikator\n"
+    "#Importieren Demografie Daten Indikator\n",
+    "demoIndicator = pd.read_csv(\"./DATA/key_figures_communities/Indicator_DemoData.csv\", delimiter=\";\")\n",
+    "\n",
+    "for index, row in demoIndicator.iterrows():\n",
+    "    indicatorId = '\"' + row[\"INDICATORS\"] + '\"'\n",
+    "    de = '\"' + row[\"DE\"] + '\"'\n",
+    "    \n",
+    "    sql = \"INSERT INTO indicator VALUES({},{})\".format(indicatorId, de)\n",
+    "    cursor.execute(sql)\n",
+    "    \n",
+    "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T10:16:14.136683Z",
+     "start_time": "2024-03-31T10:16:14.129856Z"
+    }
+   },
+   "execution_count": 12
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#Importieren Unit Messeinheit\n",
+    "unitMeas = pd.read_csv(\"./DATA/key_figures_communities/unit_mes_DemoData.csv\", delimiter=\";\")\n",
+    "\n",
+    "for index, row in unitMeas.iterrows():\n",
+    "    unitMeasId = '\"' + row[\"UNIT_MES\"] + '\"'\n",
+    "    unit = '\"' + row[\"Einheit\"] + '\"'\n",
+    "    \n",
+    "    sql = \"INSERT INTO unit VALUES({}, {})\".format(unitMeasId, unit)\n",
+    "    cursor.execute(sql)\n",
+    "\n",
+    "connection.commit()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T10:19:56.177232Z",
+     "start_time": "2024-03-31T10:19:56.171512Z"
+    }
+   },
+   "execution_count": 14
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q_/22yyqw3s7mq8z87vgh81mmvh0000gn/T/ipykernel_11104/2221128878.py:2: DtypeWarning: Columns (0,1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\")\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "no such column: CH",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[21], line 16\u001B[0m\n\u001B[1;32m     13\u001B[0m     unit \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m+\u001B[39m row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUNIT_MES\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     15\u001B[0m     sql \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mINSERT INTO demoValue VALUES(NULL,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m)\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCODE_REGION\u001B[39m\u001B[38;5;124m\"\u001B[39m], period, indicator, unit, row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mVALUE\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[0;32m---> 16\u001B[0m     \u001B[43mcursor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[43msql\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     18\u001B[0m connection\u001B[38;5;241m.\u001B[39mcommit()\n",
+      "\u001B[0;31mOperationalError\u001B[0m: no such column: CH"
+     ]
+    }
+   ],
+   "source": [
+    "#Importieren demoValue\n",
+    "demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\")\n",
+    "\n",
+    "for index, row in demoValue.iterrows():\n",
+    "    period = row[\"PERIOD_REF\"]\n",
+    "    if isinstance(period, str):\n",
+    "        period = '\"' + period + '\"'\n",
+    "    else:\n",
+    "        period = str(period)\n",
+    "        period = '\"' + period + '\"'\n",
+    "        \n",
+    "    indicator = '\"' + row[\"INDICATORS\"] + '\"'\n",
+    "    unit = '\"' + row[\"UNIT_MES\"] + '\"'\n",
+    "    \n",
+    "    sql = \"INSERT INTO demoValue VALUES(NULL,{},{},{},{},{})\".format(row[\"CODE_REGION\"], period, indicator, unit, row[\"VALUE\"])\n",
+    "    cursor.execute(sql)\n",
+    "    \n",
+    "connection.commit()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T10:37:39.729213Z",
+     "start_time": "2024-03-31T10:37:39.608281Z"
+    }
+   },
+   "execution_count": 21
   }
  ]
 }
