--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -6049,25 +6049,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q_/22yyqw3s7mq8z87vgh81mmvh0000gn/T/ipykernel_11104/2221128878.py:2: DtypeWarning: Columns (0,1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/q_/22yyqw3s7mq8z87vgh81mmvh0000gn/T/ipykernel_11104/2984525681.py:2: DtypeWarning: Columns (0,1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\")\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "no such column: CH",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[21], line 16\u001B[0m\n\u001B[1;32m     13\u001B[0m     unit \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m+\u001B[39m row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUNIT_MES\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     15\u001B[0m     sql \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mINSERT INTO demoValue VALUES(NULL,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m,\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m)\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCODE_REGION\u001B[39m\u001B[38;5;124m\"\u001B[39m], period, indicator, unit, row[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mVALUE\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[0;32m---> 16\u001B[0m     \u001B[43mcursor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[43msql\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     18\u001B[0m connection\u001B[38;5;241m.\u001B[39mcommit()\n",
-      "\u001B[0;31mOperationalError\u001B[0m: no such column: CH"
      ]
     }
    ],
    "source": [
     "#Importieren demoValue\n",
     "demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\")\n",
+    "demoValue.replace(\"CH\", 0, inplace=True)\n",
+    "demoValue.replace(np.nan, \"NULL\", inplace=True)\n",
     "\n",
     "for index, row in demoValue.iterrows():\n",
     "    period = row[\"PERIOD_REF\"]\n",
@@ -6088,11 +6079,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T10:37:39.729213Z",
-     "start_time": "2024-03-31T10:37:39.608281Z"
+     "end_time": "2024-03-31T10:42:19.706759Z",
+     "start_time": "2024-03-31T10:42:17.707426Z"
     }
    },
-   "execution_count": 21
+   "execution_count": 26
   }
  ]
 }
