Changing some datatypes

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -38,11 +38,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:05:59.895218Z",
-     "start_time": "2024-03-31T13:05:59.618075Z"
+     "end_time": "2024-03-31T16:44:11.447241Z",
+     "start_time": "2024-03-31T16:44:11.442917Z"
     }
    },
-   "execution_count": 1
+   "execution_count": 51
   },
   {
    "cell_type": "code",
@@ -76,26 +76,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:05:59.904841Z",
-     "start_time": "2024-03-31T13:05:59.901402Z"
+     "end_time": "2024-03-31T16:44:11.452500Z",
+     "start_time": "2024-03-31T16:44:11.449417Z"
     }
    },
-   "execution_count": 2
+   "execution_count": 52
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Tabelle erstellen\n",
-    "sql = [\"CREATE TABLE city (id INTEGER PRIMARY KEY, plz int,cityName string,bfsID int,lawCityName string)\",\n",
-    "\"CREATE TABLE smartmeter (id INTEGER PRIMARY KEY, plz REFERENCES city(plz) ON UPDATE CASCADE, timestamp string,anzMeter int,valueKwh float)\",\n",
-    "\"CREATE TABLE solarPlants (id INTEGER PRIMARY KEY, xtfID int,  plz int,  totalPower float,  mainCategory string,  subCategory string, plantCategory string,  _x int,  _y int, FOREIGN KEY (plz) REFERENCES city(plz) ON UPDATE CASCADE, FOREIGN KEY (subCategory) REFERENCES subCategory(id) ON UPDATE CASCADE, FOREIGN KEY (mainCategory) REFERENCES mainCategory(id) ON UPDATE CASCADE, FOREIGN KEY (plantCategory) REFERENCES plantCategory(id) ON UPDATE CASCADE)\",\n",
-    "\"CREATE TABLE mainCategory (  id string PRIMARY KEY,  de string,  fr string,  it string,  en string)\",\n",
-    "\"CREATE TABLE plantCategory (  id string PRIMARY KEY,  de string,  fr string,  it string,  en string)\",\n",
-    "\"CREATE TABLE subCategory (  id string PRIMARY KEY,  de string,  fr string,  it string,  en string)\",\n",
-    "\"CREATE TABLE indicator (  id string PRIMARY KEY,  descr string)\",\n",
-    "\"CREATE TABLE unit (  id string,  mes string)\",\n",
-    "\"CREATE TABLE demoValue (  id INTEGER PRIMARY KEY,  bfsID int,  period string,  indicator string,  unit string,  value float, FOREIGN KEY (bfsID) REFERENCES plz(bfsID) ON UPDATE CASCADE, FOREIGN KEY (indicator) REFERENCES indicator (id) ON UPDATE CASCADE, FOREIGN KEY (unit) REFERENCES unit(id) ON UPDATE CASCADE)\"]\n",
+    "# Tabelle erstellen\n",
+    "sql = [\"CREATE TABLE city (id INTEGER PRIMARY KEY, plz string, cityName string, bfsID string, lawCityName string)\",\n",
+    "\"CREATE TABLE smartmeter (id INTEGER PRIMARY KEY, plz REFERENCES city(plz) ON UPDATE CASCADE, timestamp string, anzMeter int,valueKwh float)\",\n",
+    "\"CREATE TABLE solarPlants (id INTEGER PRIMARY KEY, xtfID string, plz string, totalPower float, mainCategory string, subCategory string, plantCategory string,  _x int,  _y int, FOREIGN KEY (plz) REFERENCES city(plz) ON UPDATE CASCADE, FOREIGN KEY (subCategory) REFERENCES subCategory(id) ON UPDATE CASCADE, FOREIGN KEY (mainCategory) REFERENCES mainCategory(id) ON UPDATE CASCADE, FOREIGN KEY (plantCategory) REFERENCES plantCategory(id) ON UPDATE CASCADE)\",\n",
+    "\"CREATE TABLE mainCategory (id string PRIMARY KEY, de string, fr string, it string, en string)\",\n",
+    "\"CREATE TABLE plantCategory (id string PRIMARY KEY, de string, fr string, it string, en string)\",\n",
+    "\"CREATE TABLE subCategory (id string PRIMARY KEY, de string, fr string, it string, en string)\",\n",
+    "\"CREATE TABLE indicator (id string PRIMARY KEY, descr string)\",\n",
+    "\"CREATE TABLE unit (id string,  mes string)\",\n",
+    "\"CREATE TABLE demoValue (id INTEGER PRIMARY KEY, bfsID string, period string, indicator string, unit string, value float, FOREIGN KEY (bfsID) REFERENCES plz(bfsID) ON UPDATE CASCADE, FOREIGN KEY (indicator) REFERENCES indicator (id) ON UPDATE CASCADE, FOREIGN KEY (unit) REFERENCES unit(id) ON UPDATE CASCADE)\"]\n",
     "\n",
     "for code in sql:\n",
     "    cursor.execute(code)\n",
@@ -104,17 +104,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:05:59.910903Z",
-     "start_time": "2024-03-31T13:05:59.905974Z"
+     "end_time": "2024-03-31T16:44:11.468782Z",
+     "start_time": "2024-03-31T16:44:11.461705Z"
     }
    },
-   "execution_count": 3
+   "execution_count": 53
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#City Daten einlesen als Dataframe und in DB sichern\n",
+    "# City Daten einlesen als Dataframe und in DB sichern\n",
     "city = pd.read_csv(\"./DATA/city_directory/AMTOVZ_CSV_LV95.csv\", delimiter=\";\")\n",
     "for index, row in city.iterrows():\n",
     "    ort = '\"' + row[\"Ortschaftsname\"] + '\"'\n",
@@ -127,17 +127,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:00.037897Z",
-     "start_time": "2024-03-31T13:05:59.911737Z"
+     "end_time": "2024-03-31T16:44:12.020279Z",
+     "start_time": "2024-03-31T16:44:11.469811Z"
     }
    },
-   "execution_count": 4
+   "execution_count": 54
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Solar Anlagen Daten einlesen als Dataframe und in DB sichern\n",
+    "# Solar Anlagen Daten einlesen als Dataframe und in DB sichern\n",
     "plantCategory = pd.read_csv(\"./DATA/solar_powerplants/PlantCategoryCatalogue.csv\", delimiter=\",\")\n",
     "plantCategory.head()\n",
     "\n",
@@ -155,17 +155,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:00.044355Z",
-     "start_time": "2024-03-31T13:06:00.039466Z"
+     "end_time": "2024-03-31T16:44:12.025224Z",
+     "start_time": "2024-03-31T16:44:12.020879Z"
     }
    },
-   "execution_count": 5
+   "execution_count": 55
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Importieren der Hauptkategorien\n",
+    "# Importieren der Hauptkategorien\n",
     "mainCategory = pd.read_csv(\"./DATA/solar_powerplants/MainCategoryCatalogue.csv\", delimiter=\",\")\n",
     "mainCategory.head()\n",
     "\n",
@@ -183,17 +183,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:00.048996Z",
-     "start_time": "2024-03-31T13:06:00.045157Z"
+     "end_time": "2024-03-31T16:44:12.029842Z",
+     "start_time": "2024-03-31T16:44:12.026387Z"
     }
    },
-   "execution_count": 6
+   "execution_count": 56
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Importieren der Unterkategorien\n",
+    "# Importieren der Unterkategorien\n",
     "subCategory = pd.read_csv(\"./DATA/solar_powerplants/SubCategoryCatalogue.csv\", delimiter=\",\")\n",
     "subCategory.head()\n",
     "\n",
@@ -211,19 +211,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:00.053821Z",
-     "start_time": "2024-03-31T13:06:00.049583Z"
+     "end_time": "2024-03-31T16:44:12.033795Z",
+     "start_time": "2024-03-31T16:44:12.030333Z"
     }
    },
-   "execution_count": 7
+   "execution_count": 57
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Importieren der Solar Kraftanlagen\n",
-    "\n",
-    "\n",
+    "# Importieren der Solar Kraftanlagen\n",
     "electricityProductionPlant = pd.read_csv(\"./DATA/solar_powerplants/ElectricityProductionPlant.csv\", delimiter=\",\")\n",
     "electricityProductionPlant.head()\n",
     "electricityProductionPlant.replace(np.nan, \"NULL\", inplace=True)\n",
@@ -247,11 +245,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:05.506187Z",
-     "start_time": "2024-03-31T13:06:00.054547Z"
+     "end_time": "2024-03-31T16:44:16.681011Z",
+     "start_time": "2024-03-31T16:44:12.034301Z"
     }
    },
-   "execution_count": 8
+   "execution_count": 58
   },
   {
    "cell_type": "code",
@@ -272,11 +270,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:05.517333Z",
-     "start_time": "2024-03-31T13:06:05.506994Z"
+     "end_time": "2024-03-31T16:44:16.693723Z",
+     "start_time": "2024-03-31T16:44:16.681739Z"
     }
    },
-   "execution_count": 9
+   "execution_count": 59
   },
   {
    "cell_type": "code",
@@ -297,27 +295,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:05.521655Z",
-     "start_time": "2024-03-31T13:06:05.517951Z"
+     "end_time": "2024-03-31T16:44:16.697365Z",
+     "start_time": "2024-03-31T16:44:16.694325Z"
     }
    },
-   "execution_count": 10
+   "execution_count": 60
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q_/22yyqw3s7mq8z87vgh81mmvh0000gn/T/ipykernel_13409/2984525681.py:2: DtypeWarning: Columns (0,1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Importieren demoValue\n",
-    "demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\")\n",
+    "demoValue = pd.read_csv(\"./DATA/key_figures_communities/ts-x-21.03.01.csv\", delimiter=\";\", dtype={'PERIOD_REF': str, 'PERIOD_COMP': str, 'REGION': str})\n",
     "demoValue.replace(\"CH\", 0, inplace=True)\n",
     "demoValue.replace(np.nan, \"NULL\", inplace=True)\n",
     "\n",
@@ -340,17 +329,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:06:07.488417Z",
-     "start_time": "2024-03-31T13:06:05.522442Z"
+     "end_time": "2024-03-31T16:44:18.354079Z",
+     "start_time": "2024-03-31T16:44:16.697824Z"
     }
    },
-   "execution_count": 11
+   "execution_count": 61
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Importieren SmartMeter DATA\n",
+    "# Importieren SmartMeter DATA\n",
     "path = './DATA/smartmeter'\n",
     "csv_files = glob.glob(path + '/*.csv.gz')\n",
     "df_list = (pd.read_csv(file) for file in csv_files)\n",
@@ -367,11 +356,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T13:10:34.702140Z",
-     "start_time": "2024-03-31T13:06:07.489131Z"
+     "end_time": "2024-03-31T16:47:54.625267Z",
+     "start_time": "2024-03-31T16:44:18.355653Z"
     }
    },
-   "execution_count": 12
+   "execution_count": 62
   }
  ]
 }
