Adding some database views

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "#Import Modules\n",
-    "import os, sys, sqlite3\n",
+    "import os, sqlite3\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import glob\n"
@@ -38,11 +38,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:11.447241Z",
-     "start_time": "2024-03-31T16:44:11.442917Z"
+     "end_time": "2024-04-01T08:17:28.970105Z",
+     "start_time": "2024-04-01T08:17:28.967868Z"
     }
    },
-   "execution_count": 51
+   "execution_count": 64
   },
   {
    "cell_type": "code",
@@ -76,11 +76,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:11.452500Z",
-     "start_time": "2024-03-31T16:44:11.449417Z"
+     "end_time": "2024-04-01T08:17:28.973634Z",
+     "start_time": "2024-04-01T08:17:28.971198Z"
     }
    },
-   "execution_count": 52
+   "execution_count": 65
   },
   {
    "cell_type": "code",
@@ -104,11 +104,38 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:11.468782Z",
-     "start_time": "2024-03-31T16:44:11.461705Z"
+     "end_time": "2024-04-01T08:17:28.982511Z",
+     "start_time": "2024-04-01T08:17:28.974557Z"
     }
    },
-   "execution_count": 53
+   "execution_count": 66
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Views erstellen\n",
+    "sql = [ \"CREATE VIEW population AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_01_01';\",\n",
+    "        \"CREATE VIEW population_density AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_01_03';\",\n",
+    "        \"CREATE VIEW areaTotal AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_04_01';\",\n",
+    "        \"CREATE VIEW areaSettlement AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_04_02';\",\n",
+    "        \"CREATE VIEW areaAgricultural AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_04_04';\",\n",
+    "        \"CREATE VIEW areaUnproductive AS SELECT id, bfsID, period, value FROM demoValue WHERE demoValue.indicator == 'Ind_04_07';\",\n",
+    "        \"CREATE VIEW keyFiguresPopulation as SELECT p.bfsID, p.period, p.value as population, pd.value as populationDensity FROM population p LEFT JOIN population_density pd ON p.bfsID = pd.bfsID AND p.period = pd.period;\",\n",
+    "        \"CREATE VIEW keyFiguresArea as SELECT a.bfsID, a.period as periodTotal, a.value as total,ase.period as periodSettlement, ase.value as settlement, aa.period as periodAgricultural, aa.value as agricultural, au.period as periodUnproductive, au.value as unproductive FROM areaTotal a LEFT JOIN areaSettlement ase ON a.bfsID = ase.bfsID LEFT JOIN areaAgricultural aa ON a.bfsID = aa.bfsID LEFT JOIN areaUnproductive au ON a.bfsID = au.bfsID;\"\n",
+    "       ]\n",
+    "\n",
+    "for code in sql:\n",
+    "    cursor.execute(code)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-01T08:17:28.987178Z",
+     "start_time": "2024-04-01T08:17:28.983305Z"
+    }
+   },
+   "execution_count": 67
   },
   {
    "cell_type": "code",
@@ -127,11 +154,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:12.020279Z",
-     "start_time": "2024-03-31T16:44:11.469811Z"
+     "end_time": "2024-04-01T08:17:29.532511Z",
+     "start_time": "2024-04-01T08:17:28.988053Z"
     }
    },
-   "execution_count": 54
+   "execution_count": 68
   },
   {
    "cell_type": "code",
@@ -155,11 +182,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:12.025224Z",
-     "start_time": "2024-03-31T16:44:12.020879Z"
+     "end_time": "2024-04-01T08:17:29.537001Z",
+     "start_time": "2024-04-01T08:17:29.533335Z"
     }
    },
-   "execution_count": 55
+   "execution_count": 69
   },
   {
    "cell_type": "code",
@@ -183,11 +210,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:12.029842Z",
-     "start_time": "2024-03-31T16:44:12.026387Z"
+     "end_time": "2024-04-01T08:17:29.540734Z",
+     "start_time": "2024-04-01T08:17:29.537566Z"
     }
    },
-   "execution_count": 56
+   "execution_count": 70
   },
   {
    "cell_type": "code",
@@ -211,11 +238,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:12.033795Z",
-     "start_time": "2024-03-31T16:44:12.030333Z"
+     "end_time": "2024-04-01T08:17:29.545392Z",
+     "start_time": "2024-04-01T08:17:29.541850Z"
     }
    },
-   "execution_count": 57
+   "execution_count": 71
   },
   {
    "cell_type": "code",
@@ -245,11 +272,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:16.681011Z",
-     "start_time": "2024-03-31T16:44:12.034301Z"
+     "end_time": "2024-04-01T08:17:34.220956Z",
+     "start_time": "2024-04-01T08:17:29.545820Z"
     }
    },
-   "execution_count": 58
+   "execution_count": 72
   },
   {
    "cell_type": "code",
@@ -270,11 +297,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:16.693723Z",
-     "start_time": "2024-03-31T16:44:16.681739Z"
+     "end_time": "2024-04-01T08:17:34.234618Z",
+     "start_time": "2024-04-01T08:17:34.221622Z"
     }
    },
-   "execution_count": 59
+   "execution_count": 73
   },
   {
    "cell_type": "code",
@@ -295,11 +322,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:16.697365Z",
-     "start_time": "2024-03-31T16:44:16.694325Z"
+     "end_time": "2024-04-01T08:17:34.238316Z",
+     "start_time": "2024-04-01T08:17:34.235212Z"
     }
    },
-   "execution_count": 60
+   "execution_count": 74
   },
   {
    "cell_type": "code",
@@ -329,11 +356,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:44:18.354079Z",
-     "start_time": "2024-03-31T16:44:16.697824Z"
+     "end_time": "2024-04-01T08:17:35.901579Z",
+     "start_time": "2024-04-01T08:17:34.238866Z"
     }
    },
-   "execution_count": 61
+   "execution_count": 75
   },
   {
    "cell_type": "code",
@@ -356,11 +383,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-31T16:47:54.625267Z",
-     "start_time": "2024-03-31T16:44:18.355653Z"
+     "end_time": "2024-04-01T08:21:13.400228Z",
+     "start_time": "2024-04-01T08:17:35.902271Z"
     }
    },
-   "execution_count": 62
+   "execution_count": 76
   }
  ]
 }
